test/error/parser/enum-mixed-mode.dsk
let Mixed = enum
    Ok = 200
    Pending
    Error = 500
end
